--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conceptual practice </title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    <h1>Hello world</h1>
+    <div class="hero">
+        <h1>Zoro senpai</h1>
+    </div>
+    <div class="article">
+        <h2> An essay about cow</h2>
+        <p> Zoro is a monster.Zoro have three swords.Zoro is the vice captain of Monkey D Luffy. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Eos
+            reprehenderit illum provident necessitatibus temporibus, fuga cumque ut doloribus hic veniam autem deleniti
+            non maxime molestias ab quod expedita. Amet, recusandae aliquam corrupti vero explicabo delectus rem quod
+            dolore quisquam perspiciatis doloribus numquam eveniet quibusdam consectetur ratione? Illum, vero. Sit,
+            architecto eos odio qui perspiciatis, repellat hic delectus necessitatibus voluptates cupiditate laborum
+            earum recusandae error maxime voluptas tempora illo sapiente officia, cum quae quam! Pariatur, magni quidem
+            maiores temporibus quas doloremque dicta ipsam dolorum quam, minima inventore ducimus iusto facere tempore
+            neque natus a in! Voluptatum eaque iure magnam numquam nihil?
+        </p>
+    </div>
+
 </body>
+
 </html>
